--- a/test/test-applications/regression/dependency-libs/Directory.Build.props
+++ b/test/test-applications/regression/dependency-libs/Directory.Build.props
@@ -12,7 +12,7 @@
 
   <!--  Move bin and obj folders to root -->
   <PropertyGroup>
-    <BaseOutputPath>$(MSBuildThisFileDirectory)..\..\..\bin\bin\test\test-applications\regression\dependency-libs\$(MSBuildProjectName)</BaseOutputPath>
-    <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)..\..\..\bin\obj\test\test-applications\regression\dependency-libs\$(MSBuildProjectName)</BaseIntermediateOutputPath>
+    <BaseOutputPath>$(MSBuildThisFileDirectory)..\..\..\..\bin\bin\test\test-applications\regression\dependency-libs\$(MSBuildProjectName)</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)..\..\..\..\bin\obj\test\test-applications\regression\dependency-libs\$(MSBuildProjectName)</BaseIntermediateOutputPath>
   </PropertyGroup>
 </Project>
