Compile managed unit tests in the integration test pipeline

--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -478,6 +478,9 @@ stages:
     - script: build.cmd CompileFrameworkReproductions --skip
       displayName: Build .NET Framework projects (non SDK-based projects)
 
+    - script: build.cmd CompileManagedUnitTests --skip
+      displayName: Compile Managed Unit Tests (dependencies of integration tests)
+
     - script: build.cmd CompileIntegrationTests --skip
       displayName: Build integration tests
 
