--- a/test/test-applications/regression/StackExchange.Redis.AssemblyConflict.LegacyProject/Directory.Build.props
+++ b/test/test-applications/regression/StackExchange.Redis.AssemblyConflict.LegacyProject/Directory.Build.props
@@ -6,7 +6,7 @@
 
   <!--  Move bin and obj folders to root -->
   <PropertyGroup>
-    <BaseOutputPath>$(MSBuildThisFileDirectory)..\..\..\bin\bin\test\test-applications\regression\$(MSBuildProjectName)</BaseOutputPath>
-    <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)..\..\..\bin\obj\test\test-applications\regression\$(MSBuildProjectName)</BaseIntermediateOutputPath>
+    <BaseOutputPath>$(MSBuildThisFileDirectory)..\..\..\..\bin\bin\test\test-applications\regression\$(MSBuildProjectName)</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)..\..\..\..\bin\obj\test\test-applications\regression\$(MSBuildProjectName)</BaseIntermediateOutputPath>
   </PropertyGroup>
 </Project>
