--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -10,7 +10,7 @@ trigger:
       - .github/*
 
 variables:
-  buildConfiguration: Debug
+  buildConfiguration: Release
   dotnetCoreSdk5Version: 5.0.103
   ddApiKey: $(DD_API_KEY)
   DD_DOTNET_TRACER_MSBUILD:
