--- a/.azure-pipelines/runner.yml
+++ b/.azure-pipelines/runner.yml
@@ -96,8 +96,7 @@ jobs:
     displayName: dotnet build
     inputs:
       command: build
-      configuration: Release
-      arguments: /nowarn:netsdk1138
+      arguments: /nowarn:netsdk1138 --configuration Release
       projects: |
         src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
 
