--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -47,7 +47,7 @@ updates:
       - "dependencies"
       - "area:opentracing"
     allow:
-      # Allow both direct and indirect updates for all packages
+      # Allow only updates for explicitly defined dependencies
       - dependency-type: "direct"
   - package-ecosystem: "nuget"
     directory: "/src/Datadog.Trace.BenchmarkDotNet"
@@ -57,5 +57,5 @@ updates:
       - "dependencies"
       - "area:benchmarks"
     allow:
-      # Allow only direct updates for all packages
+      # Allow only updates for explicitly defined dependencies
       - dependency-type: "direct"
