Move deterministic build properties to directory.build.props

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -19,4 +19,9 @@
     <Compile Include="$(MSBuildThisFileDirectory)GlobalSuppressions.cs" Link="GlobalSuppressions.solution.cs" />
   </ItemGroup>
 
+
+  <!-- Deterministic builds -->
+  <PropertyGroup Condition="'$(TF_BUILD)' == 'true' OR '$(GITLAB_CI)' == 'true'">
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+  </PropertyGroup>
 </Project>
