--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -595,7 +595,7 @@ stages:
       inputs:
         solution: test/test-applications/aspnet/samples-iis.sln
         configuration: '$(buildConfiguration)'
-        msbuildArguments: '/p:DeployOnBuild=true /p:PublishProfile=FolderProfile.pubxml'
+        msbuildArguments: '/p:DeployOnBuild=true /p:PublishProfile=$(System.DefaultWorkingDirectory)/test/test-applications/aspnet/PublishProfiles/FolderProfile.pubxml'
         maximumCpuCount: true
 
     - task: DockerCompose@0
