Add postgres setup and execution to both the integration-tests pipeline and the unified pipeline

--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -294,6 +294,8 @@ jobs:
   - task: NuGetToolInstaller@1
     displayName: install nuget
 
+  - template: steps/install-windows-services.yml
+
   - task: NuGetCommand@2
     displayName: nuget restore
     inputs:
