--- a/test/test-applications/integrations/Samples.AWS.SQS/Samples.AWS.SQS.csproj
+++ b/test/test-applications/integrations/Samples.AWS.SQS/Samples.AWS.SQS.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ApiVersion Condition="'$(ApiVersion)' == ''">3.3.3</ApiVersion>
     <!-- Required to build multiple projects with the same Configuration|Platform -->
