Add docker-compose entries for running Kafka
Based on https://github.com/confluentinc/cp-all-in-one/blob/6.1.1-post/cp-all-in-one/docker-compose.yml
Run the full kafaka services using: docker-compose up kafka-control-center kafka-rest-proxy
Visit the Confluent Control Center at http://localhost:9021/

Note that I omitted the ksqldb and connect services

Added wait-for-it to integration test scripts and added to sample build scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,94 @@ services:
     ports:
     - "127.0.0.1:8585:8585"
 
+  # See https://github.com/confluentinc/cp-all-in-one/blob/6.1.1-post/cp-all-in-one/docker-compose.yml
+  # For original definitions
+  kafka-zookeeper:
+    image: confluentinc/cp-zookeeper:6.1.1
+    hostname: kafka-zookeeper
+    container_name: kafka-zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+
+  kafka-broker:
+    image: confluentinc/cp-server:6.1.1
+    hostname: kafka-broker
+    container_name: kafka-broker
+    depends_on:
+      - kafka-zookeeper
+    ports:
+      - "9092:9092"
+      - "9101:9101"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'kafka-zookeeper:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_JMX_PORT: 9101
+      KAFKA_JMX_HOSTNAME: localhost
+      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://kafka-schema-registry:8081
+      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka-broker:29092
+      CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 1
+      CONFLUENT_METRICS_ENABLE: 'true'
+      CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
+
+  kafka-schema-registry:
+    image: confluentinc/cp-schema-registry:6.1.1
+    hostname: kafka-schema-registry
+    container_name: kafka-schema-registry
+    depends_on:
+      - kafka-broker
+    ports:
+      - "8081:8081"
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: kafka-schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'kafka-broker:29092'
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
+
+  kafka-control-center:
+    image: confluentinc/cp-enterprise-control-center:6.1.1
+    hostname: kafka-control-center
+    container_name: kafka-control-center
+    depends_on:
+      - kafka-broker
+      - kafka-schema-registry
+    ports:
+      - "9021:9021"
+    environment:
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'kafka-broker:29092'
+      CONTROL_CENTER_SCHEMA_REGISTRY_URL: "http://kafka-schema-registry:8081"
+      CONTROL_CENTER_REPLICATION_FACTOR: 1
+      CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
+      CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
+      CONFLUENT_METRICS_TOPIC_REPLICATION: 1
+      PORT: 9021
+
+  kafka-rest-proxy:
+    image: confluentinc/cp-kafka-rest:6.1.1
+    depends_on:
+      - kafka-broker
+      - kafka-schema-registry
+    ports:
+      - 8082:8082
+    hostname: kafka-rest-proxy
+    container_name: kafka-rest-proxy
+    environment:
+      KAFKA_REST_HOST_NAME: kafka-rest-proxy
+      KAFKA_REST_BOOTSTRAP_SERVERS: 'kafka-broker:29092'
+      KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
+      KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://kafka-schema-registry:8081'
+
   build:
     build:
       context: ./
@@ -322,6 +410,7 @@ services:
     - MYSQL57_HOST=mysql57
     - MYSQL57_PORT=3306
     - RABBITMQ_HOST=rabbitmq
+    - KAFKA_BROKER_HOST=kafka-broker:29092
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=netcoreapp2.1
     depends_on:
@@ -335,6 +424,8 @@ services:
     - mysql
     - mysql57
     - rabbitmq
+    - kafka-broker
+    - kafka-zookeeper
 
   IntegrationTests.Alpine.Core30:
     build:
@@ -357,6 +448,7 @@ services:
     - MYSQL57_HOST=mysql57
     - MYSQL57_PORT=3306
     - RABBITMQ_HOST=rabbitmq
+    - KAFKA_BROKER_HOST=kafka-broker:29092
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=netcoreapp3.0
     depends_on:
@@ -370,6 +462,8 @@ services:
     - mysql
     - mysql57
     - rabbitmq
+    - kafka-broker
+    - kafka-zookeeper
 
   IntegrationTests.Alpine.Core31:
     build:
@@ -392,6 +486,7 @@ services:
     - MYSQL57_HOST=mysql57
     - MYSQL57_PORT=3306
     - RABBITMQ_HOST=rabbitmq
+    - KAFKA_BROKER_HOST=kafka-broker:29092
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=netcoreapp3.1
     depends_on:
@@ -405,6 +500,8 @@ services:
     - mysql
     - mysql57
     - rabbitmq
+    - kafka-broker
+    - kafka-zookeeper
 
   IntegrationTests.Alpine.Core50:
     build:
@@ -427,6 +524,7 @@ services:
     - MYSQL57_HOST=mysql57
     - MYSQL57_PORT=3306
     - RABBITMQ_HOST=rabbitmq
+    - KAFKA_BROKER_HOST=kafka-broker:29092
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=net5.0
     depends_on:
@@ -440,6 +538,8 @@ services:
     - mysql
     - mysql57
     - rabbitmq
+    - kafka-broker
+    - kafka-zookeeper
 
   IntegrationTests:
     build:
@@ -462,6 +562,7 @@ services:
     - MYSQL57_HOST=mysql57
     - MYSQL57_PORT=3306
     - RABBITMQ_HOST=rabbitmq
+    - KAFKA_BROKER_HOST=kafka-broker:29092
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=${publishTargetFramework}
     depends_on:
@@ -475,6 +576,8 @@ services:
     - mysql
     - mysql57
     - rabbitmq
+    - kafka-broker
+    - kafka-zookeeper
 
   IntegrationTests.ARM64.Core50:
     build:
